[package]
name = "sniffer_bot_light"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sniffer_bot_light"
path = "src/main.rs"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[[bin]]

name = "token_generator"
path = "src/bin/token_generator.rs"

[[bin]]

name = "market_simulator"
path = "src/bin/market_simulator.rs"

[features]
default = []
mock-mode = []
# Map features to optional deps (required for cargo to resolve metadata)
pumpfun = ["dep:pumpfun"]
# raydium = ["dep:raydium-sdk-V2"]  # Temporarily disabled due to version conflicts
orca = ["dep:orca_whirlpools"]
# Convenience meta-feature (optional)
dex-all = ["pumpfun", "orca"]  # Removed raydium from meta-feature

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
itertools = "0.13"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fastrand = "2"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }

# HTTP / rate limiting / retries / logging
reqwest = { version = "0.11", features = ["json"] }
governor = "0.6"
nonempty = { version = "0.10", features = ["serialize"] }
tokio-retry = "0.3"
log = "0.4"
scopeguard = "1.2"

# Solana + SPL
solana-client = "2.3"
solana-sdk = "2.3"
solana-transaction-status = "2.3"
spl-associated-token-account = "7.0.0"
spl-token = "6.0"

# DEX SDKs (optional)
pumpfun = { version = "4.4.1", features = ["create-ata", "versioned-tx", "close-ata"], optional = true }
# raydium-sdk-V2 = { version = "0.0.9", optional = true }  # Temporarily disabled due to Solana version conflicts
orca_whirlpools = { version = "5.0.0", optional = true }

# Utils
base64 = "0.22.1"
eframe = { version = "0.27" }
tempfile = "3"

[dev-dependencies]
tempfile = "3"